force-app/main/default/objects/Account/fields/Is_Exact_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Exact_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exact Match</label>
    <type>Checkbox</type>
</CustomField>