force-app/main/default/objects/Account/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>Student Names</description>
    <label>Student Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jeevan</fullName>
            </value>
            <value>
                <fullName>Surendra</fullName>
            </value>
            <value>
                <fullName>Ramgopal</fullName>
            </value>
            <value>
                <fullName>Karthik</fullName>
            </value>
            <value>
                <fullName>Santhosh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>