force-app/main/default/objects/Account/fields/Student_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Number__c</fullName>
    <label>Student Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>205</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>